--- a/FRONT/templates/admin-base.html
+++ b/FRONT/templates/admin-base.html
@@ -13,7 +13,7 @@
             <a href="{{ url_for('index') }}"> <img src="/static/img/logo-br.png" alt="Logo" class="logo"> </a>
             <input type="text" placeholder="Buscar" class="barra-busqueda">
             <a class="boton-reservar" href="{{url_for('reserva')}}">Consulta tu reserva</a>
-            <a class="boton-modificar" href=""> Modificar eventos </a>
+            <a href="{{ url_for('crear_evento') }}" class="boton-modificar" href=""> Crear Evento </a>
             <a class="boton-cerrar-sesion" href="{{ url_for('logout') }}">Cerrar sesión</a>
             <img src="/static/img/icon-admin.jpg" alt="admin"class="icono_admin"></a>
         </div>
