Elimina codigo que no se utiliza (ID=#67)

--- a/FRONT/templates/descripcion_evento.html
+++ b/FRONT/templates/descripcion_evento.html
@@ -21,7 +21,7 @@
                 <h2>Fecha y hora:</h2><p>{{fecha_hora}}</p>
                 <h2>Descripcion</h2><p>{{descripcion}}</p>
                 <h2>Cupos</h2><p>Totales: {{entradas_totales}}</p><p>Disponibles: {{entradas_disponibles}}</p>
-                <h2>Precio:</h2><p>{{precio_entrada}}</p>
+                <h2>Precio:</h2><p>${{precio_entrada}}</p>
                 <a id="enlace" href="{{ url_for('Pago') }}">Comprar Entrada</a>
 
             </div>
