--- a/FRONT/static/css/home.css
+++ b/FRONT/static/css/home.css
@@ -93,11 +93,15 @@ h2 {
 }
 
 .eventos {
-    padding: 20px;
-    margin: 30px;
+    padding: 10px;
+    margin: 15px;
     row-gap: 15px;
+    border-radius: 5px;
 }
 
-.eventos{
-    background-image: url("/static/img/musica/imagen-eventos.avif");
+.eventos h2,
+.eventos p {
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+    padding: 5px;
 }
