Arreglo errores de sintaxis

--- a/FRONT/templates/Teatro.html
+++ b/FRONT/templates/Teatro.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 
-<link rel="stylesheet" href="{{ url_for('static', filename='/css/teatro.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='/css/Teatro.css') }}">
 
 <div class = "contenedor">
     <h1>Eventos de {{nombre_categoria}}</h1>
