#78 se guarda el nombre del usuario falta la id

--- a/FRONT/templates/pago.html
+++ b/FRONT/templates/pago.html
@@ -13,7 +13,7 @@
     <form method="POST" action="/pago" id="paymentForm">
         <div class="input-group">
             <label for="nombre">Nombre de Usuario</label>
-            <input type="text" id="nombre" name="nombre" required>
+            <input type="text" id="nombre" name="nombre" value="{{ nombre_usuario }}" required>
         </div>
         <div class="input-group">
             <label for="id_evento">ID del Evento</label>
