--- a/APP/templates/universe.kv
+++ b/APP/templates/universe.kv
@@ -31,12 +31,13 @@
                 text: "Login"
                 size_hint_x: 0.2
                 background_color: 0.5, 0.2, 0.7, 1
+                on_press: root.switch_log()
                 
             Button:
                 text: "Reserva"
                 size_hint_x: 0.2
                 background_color: 0.5, 0.2, 0.7, 1
-                on_press: root.switch()
+                on_press: root.switch_res()
 
         GridLayout:
             cols: 6
@@ -175,12 +176,40 @@
                 
 
 
+        Label:
+            text: '-'
+
         Button:
-            text: "Change color!"
+            text: "Volver"
             font_size: 24
             # size: 100, 50
             size_hint: 0.5, 0.1
             pos_hint: {'center_x': 0.5, 'center_y': 0.5}
-            on_press: root.change_color()
+            on_press: root.switch_root()
+
+<Login>:
+    BoxLayout:
+        GridLayout:
+            rows: 3
+            cols: 2
+            padding: 1
+            spacing: 1
+            Label:
+                font_size: 40
+                text: 'Usuario'
+            TextInput:
+                font_size: 40
+            Label:
+                font_size: 40
+                text: 'Contraseña'
+            TextInput:
+                font_size: 40
+            Button:
+                text: 'Log in'
+            Button:
+                text: 'Volver a inicio'
+                on_press: root.switch_root()
 
 
+
+            
