modifico css del styles para agregar unas animaciones que hacian falta

--- a/FRONT/templates/base.html
+++ b/FRONT/templates/base.html
@@ -15,7 +15,7 @@
             <form action="{{ url_for('busqueda_eventos') }}" id="form-busqueda" method="get">
                 <input type="text" placeholder="Buscar" class="barra-busqueda" name="fname">
             </form>
-            <a class="boton-reservar" href="{{url_for('login')}}">Login</a>
+            <a class="boton-login" href="{{url_for('login')}}">Login</a>
         </div>
     </header>
     <main>
