agrego animaciones a los botones de mas info en el index

--- a/FRONT/static/css/home.css
+++ b/FRONT/static/css/home.css
@@ -90,6 +90,12 @@ h2 {
     text-decoration: none;
     cursor: pointer;
     justify-content: center;
+    transition: transform 0.3s ease;
+}
+
+#boton_mas_info:hover {
+    transform: scale(1.02);
+    background-color: #fc5542;
 }
 
 .eventos {
