--- a/FRONT/static/css/cultura_jp.css
+++ b/FRONT/static/css/cultura_jp.css
@@ -53,6 +53,12 @@ p {
     border-radius: 10px;
     text-decoration: none;
     cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+#boton_mas_info:hover {
+    transform: scale(1.02);
+    background-color: #fc5542;
 }
 
 button {
