--- a/FRONT/static/css/musica.css
+++ b/FRONT/static/css/musica.css
@@ -123,4 +123,10 @@ aside iframe {
     border-radius: 10px;
     text-decoration: none;
     cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+#enlace:hover {
+    transform: scale(1.02);
+    background-color: #fc5542;
 }
