--- a/FRONT/static/css/home.css
+++ b/FRONT/static/css/home.css
@@ -65,6 +65,7 @@ h2 {
     display: grid;
     /* border: 2px solid green; */
     grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     gap: 20px;
     margin: 20px auto;
     width: 80%;
@@ -81,9 +82,9 @@ h2 {
 
 #boton_mas_info {
     display: grid;
-    padding: 10px; 
+    padding: 10px;
+
     background-color: #e74c3c;
-    border: 2px solid #000000;
     color: #fff;
     font-size: 15px;
     border-radius: 10px;
@@ -99,6 +100,9 @@ h2 {
 }
 
 .eventos {
+    width: 90%;
+    height: 100%;
+
     padding: 10px;
     margin: 15px;
     row-gap: 15px;
@@ -110,4 +114,5 @@ h2 {
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 5px;
     padding: 5px;
+    width: 100%;
 }
