--- a/FRONT/static/css/conciertos.css
+++ b/FRONT/static/css/conciertos.css
@@ -113,3 +113,29 @@ button:hover {
     transform: scale(1.02);
     background-color: #fc5542;
 }
+
+@media (max-width:820px) {
+
+    .pagina {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 20px;
+    }
+    
+    #texto-inicial {
+        font-size: 23px;
+        margin-bottom: 40px;
+    }
+    
+    .eventos p {
+        display: none;
+    }
+    
+    .eventos {
+        padding: 20px;
+    }
+    .contenedor{
+        grid-template-columns: 80%;
+    }
+}
