--- a/FRONT/static/css/eSports.css
+++ b/FRONT/static/css/eSports.css
@@ -114,7 +114,7 @@ button:hover {
     cursor: pointer;
 }
 
-@media (max-width:720px) {
+@media (max-width:820px) {
 
     .pagina {
         display: flex;
@@ -134,5 +134,8 @@ button:hover {
     
     .eventos {
         padding: 20px;
+    }
+    .contenedor{
+        grid-template-columns: 80%;
     }
 }
