--- a/FRONT/static/css/fiestas.css
+++ b/FRONT/static/css/fiestas.css
@@ -114,3 +114,28 @@ button:hover {
     cursor: pointer;
 }
 
+@media (max-width:820px) {
+
+    .pagina {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 20px;
+    }
+    
+    #texto-inicial {
+        font-size: 23px;
+        margin-bottom: 40px;
+    }
+    
+    .eventos p {
+        display: none;
+    }
+    
+    .eventos {
+        padding: 20px;
+    }
+    .contenedor{
+        grid-template-columns: 80%;
+    }
+}
